--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  geolocator: ^8.0.0
-  http: ^0.13.0         # HTTP client for API requests
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  geolocator: ^13.0.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
